Add user authentication and UI components
- Implement AJAX utility for HTTP requests using Axios.
- Create user login and management API functions.
- Add Header and LeftNav components for layout.
- Integrate user authentication in Admin and Login pages.
- Store user information in local storage and memory.
- Update package.json and package-lock.json to include Axios and store.js.

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "antd": "^5.25.4",
+    "axios": "^1.9.0",
     "craco-less": "^3.0.1",
     "less": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "store": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
